# evtol

./: .clang-format  .clang-tidy  .gitignore  Aircraft.cpp  Aircraft.h  CMakeLists.txt  Doxyfile  README.md  Simulator.cpp  Simulator.h  VTOL_TABLE.ods  main.cpp
results/: results.csv
sql/: AircraftInstances .sql  AircraftModels.sql  ChargingEvents.sql  EventTypes.sql  TimedEvents.sql
src/: Aircraft.cpp  Aircraft.h  Report.cpp  Report.h  Simulator.cpp  Simulator.h  common_defs.h  main.cpp
tests/: CMakeLists.txt  SimulatorTest.cpp
